--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@clickhouse/client": "^1.10.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0"
   },
